Fix diablo align

--- a/css/master.css
+++ b/css/master.css
@@ -35,3 +35,7 @@ body {
 .input_name{
   width:100px !important;
 }
+
+.diablo{
+  position: absolute;
+}
